k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-js
  namespace: desafio-api
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 2
  selector:
    matchLabels:
      api: app-js
  template:
    metadata:
      labels:
        api: app-js
    spec:
      containers:
        - name: app-js
          image: dadags/app-js:v5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          startupProbe:
            httpGet:
              path: /healthz
              port: 3001
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 1
            periodSeconds: 10
            initialDelaySeconds: 10  
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3001
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 1
            periodSeconds: 30
            initialDelaySeconds: 10  
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3001
            failureThreshold: 5
            successThreshold: 1
            periodSeconds: 10
            initialDelaySeconds: 10  
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
