k8s/app-service.yaml
apiVersion: v1 
kind: Service 

metadata:
  name: app-js-svc
  namespace: desafio-api

spec:
  type: ClusterIP
  selector:
    api: app-js
  ports:
    - port: 80
      targetPort: 3001
