k8s/db-service.yaml
apiVersion: v1 
kind: Service 

metadata:
  name: app-js-svc
  namespace: app-db

spec:
  type: ClusterIP
  selector:
    api: db
  ports:
    - port: 3306
      targetPort: 3306
