k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-nodeport-service
  namespace: desafio-api
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3001
      nodePort: 30007
  selector:
    app: api
