k8s/service.yaml
apiVersion: v1 
kind: Service 

metadata:
  name: app-js-svc

spec:
  type: ClusterIP
  selector:
    api: app-js
  ports:
    - port: 80
      targetPort: 3001
